--- a/company.html
+++ b/company.html
@@ -24,17 +24,17 @@
     <div class="pages">
     <nav id="my-menu">
       <ul>
-         <li><a href="main.html">Домой</a></li>
-          <li><a href="goods.html">Товары</a></li>
-          <li class="active"><a href="company.html" class="a-active">Наша Компания</a></li>
-          <li><a href="contact.html">Контакты</a></li>
+         <li><a href="main.html">Р”РѕРјРѕР№</a></li>
+          <li><a href="goods.html">РўРѕРІР°СЂС‹</a></li>
+          <li class="active"><a href="company.html" class="a-active">РќР°С€Р° РљРѕРјРїР°РЅРёСЏ</a></li>
+          <li><a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a></li>
       </ul>
     </nav>
   <div class="info col-md-7" alt="About Our Company">
-    <h1><hr>Авторское ателье Ларисы Мисурагиной.<hr>
-  Мы создаем одежду для женщин с любовью.
-  Одежда для работы с нестрогим дресс кодом. Одежда для свободного времени.
-    <hr>Подчеркните свою индивидуальность воспользовавшись нашим мастерством.<hr></h1>
+    <h1><hr>РђРІС‚РѕСЂСЃРєРѕРµ Р°С‚РµР»СЊРµ Р›Р°СЂРёСЃС‹ РњРёСЃСѓСЂР°РіРёРЅРѕР№.<hr>
+  РњС‹ СЃРѕР·РґР°РµРј РѕРґРµР¶РґСѓ РґР»СЏ Р¶РµРЅС‰РёРЅ СЃ Р»СЋР±РѕРІСЊСЋ.
+  РћРґРµР¶РґР° РґР»СЏ СЂР°Р±РѕС‚С‹ СЃ РЅРµСЃС‚СЂРѕРіРёРј РґСЂРµСЃСЃ РєРѕРґРѕРј. РћРґРµР¶РґР° РґР»СЏ СЃРІРѕР±РѕРґРЅРѕРіРѕ РІСЂРµРјРµРЅРё.
+    <hr>РџРѕРґС‡РµСЂРєРЅРёС‚Рµ СЃРІРѕСЋ РёРЅРґРёРІРёРґСѓР°Р»СЊРЅРѕСЃС‚СЊ РІРѕСЃРїРѕР»СЊР·РѕРІР°РІС€РёСЃСЊ РЅР°С€РёРј РјР°СЃС‚РµСЂСЃС‚РІРѕРј.<hr></h1>
     </div>
   </div>
 </div>
