--- a/goods.html
+++ b/goods.html
@@ -24,10 +24,10 @@
     <div class="pages">
     <nav id="my-menu">
       <ul>
-         <li><a href="main.html">Домой</a></li>
-          <li class="active"><a href="goods.html" class="a-active">Товары</a></li>
-          <li><a href="company.html">Наша<br>Компания</a></li>
-          <li><a href="contact.html">Контакты</a></li>
+         <li><a href="main.html">Р”РѕРјРѕР№</a></li>
+          <li class="active"><a href="goods.html" class="a-active">РўРѕРІР°СЂС‹</a></li>
+          <li><a href="company.html">РќР°С€Р°<br>РљРѕРјРїР°РЅРёСЏ</a></li>
+          <li><a href="contact.html">РљРѕРЅС‚Р°РєС‚С‹</a></li>
       </ul>
     </nav>
   </div>
@@ -35,16 +35,15 @@
       <div class="photo1" class="col-md-5">
         <img src="img/1.jpg">
       <div class="overlay">
-      <p>Узнать Больше</p>
+      <p>РЈР·РЅР°С‚СЊ Р‘РѕР»СЊС€Рµ</p>
     </div>
   </div>
     <div class="photo2" class="col-md-5">
       <img src="img/2.jpg">
   <div class="overlay2">
-      <p>Узнать Больше</p>
+      <p>РЈР·РЅР°С‚СЊ Р‘РѕР»СЊС€Рµ</p>
     </div>
   </div>
-  
 </div>
 </body>
 </html>
